--- a/app.json
+++ b/app.json
@@ -1,10 +1,27 @@
 {
   "pages": [
-    "pages/wq/index",
+    "pages/login/phone/code/index",
+    "pages/login/phone/pwd/index",
+    "pages/login/wechat/index",
+   
     "pages/index/index",
-    "pages/test/index",
+    "pages/my/index",
     "pages/logs/logs"
   ],
+
+    "tabBar": {
+      "list": [
+        {
+          "pagePath": "pages/index/index",
+          "text": "首页"
+        },
+        {
+          "pagePath": "pages/my/index",
+          "text": "我的"
+        }
+      ]
+    },
+  
   "window": {
     "navigationBarTextStyle": "black",
     "navigationBarTitleText": "Weixin",
@@ -13,5 +30,8 @@
   "style": "v2",
   "componentFramework": "glass-easel",
   "sitemapLocation": "sitemap.json",
-  "lazyCodeLoading": "requiredComponents"
+  "lazyCodeLoading": "requiredComponents",
+    "resolveAlias": {
+      "@/*": "/*"
+    }
 }
