--- a/app.json
+++ b/app.json
@@ -2,18 +2,20 @@
   "pages": [
     "pages/merchant/apply/list/index",
     "pages/merchant/apply/index/index",
+    "pages/login/phone/code/index",
+    "pages/index/index",
+    "pages/login/phone/pwd/index",
+    "pages/login/wechat/index",
+
     "pages/store/apply/list/index",
     "pages/store/apply/index/index",
     "pages/my/index",
     "pages/modify/index",
     "pages/findback/index",
     "pages/pay/index",
-    "pages/login/phone/code/index",
-    "pages/index/index",
-    "pages/login/phone/pwd/index",
-    "pages/login/wechat/index",
     "pages/bean/index",
     "pages/order/index",
+    
     "pages/appraise/index/index",
     "pages/appraise/list/index",
     "pages/complain/index/index",
@@ -22,8 +24,8 @@
     "pages/feedback/list/index",
     "pages/store/apply/index",
     "pages/store/detail/index",
-    "pages/logs/logs",
-    "pages/about/index"
+    "pages/about/index",
+    "pages/logs/logs"
   ],
 
   "tabBar": {
