页面布局基本修改完成

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -4,5 +4,67 @@
   "setting": {
     "compileHotReLoad": true,
     "urlCheck": false
+  },
+  "condition": {
+    "miniprogram": {
+      "list": [
+        {
+          "name": "pages/feedback/list/index",
+          "pathName": "pages/feedback/list/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "pages/feedback/index/index",
+          "pathName": "pages/feedback/index/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "pages/store/apply/index",
+          "pathName": "pages/store/apply/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "pages/store/detail/index",
+          "pathName": "pages/store/detail/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "pages/complain/index/index",
+          "pathName": "pages/complain/index/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "pages/complain/list/index",
+          "pathName": "pages/complain/list/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "pages/appraise/index/index",
+          "pathName": "pages/appraise/index/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "pages/appraise/list/index",
+          "pathName": "pages/appraise/list/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        }
+      ]
+    }
   }
 }
