store/apply页面新增部分字段

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -9,6 +9,20 @@
     "miniprogram": {
       "list": [
         {
+          "name": "pages/merchant/apply/index/index",
+          "pathName": "pages/merchant/apply/index/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "pages/index/index",
+          "pathName": "pages/index/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "pages/feedback/list/index",
           "pathName": "pages/feedback/list/index",
           "query": "",
