store/apply temp

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -9,6 +9,20 @@
     "miniprogram": {
       "list": [
         {
+          "name": "pages/store/apply/list/index",
+          "pathName": "pages/store/apply/list/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "pages/store/apply/index/index",
+          "pathName": "pages/store/apply/index/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "pages/merchant/apply/index/index",
           "pathName": "pages/merchant/apply/index/index",
           "query": "",
@@ -32,13 +46,6 @@
         {
           "name": "pages/feedback/index/index",
           "pathName": "pages/feedback/index/index",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "pages/store/apply/index",
-          "pathName": "pages/store/apply/index",
           "query": "",
           "launchMode": "default",
           "scene": null
