--- a/project.config.json
+++ b/project.config.json
@@ -24,5 +24,6 @@
     "tabIndent": "auto",
     "tabSize": 2
   },
-  "appid": "wx084d5d60b374c2a4"
+  "appid": "wx084d5d60b374c2a4",
+  "simulatorPluginLibVersion": {}
 }
