完成了反诈咨询集的连接

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/index/allList/index",
     "pages/about/index",
     "pages/exam/examList/examList",
     "pages/exam/exam/exam",
