--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "pages/index/index",
     "pages/index/allList/index",
     "pages/about/index",
+    "pages/detail/detail",
     "pages/exam/examList/examList",
     "pages/exam/exam/exam",
     "pages/exam/examResult/examResult",
