完成了收藏列表的连接

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/index/index",
     "pages/index/allList/index",
+    "pages/my/favoriteList/index",
     "pages/about/index",
     "pages/detail/detail",
     "pages/exam/examList/examList",
