实现了管理员查看论坛列表以及删除分类的连接

--- a/app.json
+++ b/app.json
@@ -9,6 +9,8 @@
     "pages/exam/exam/exam",
     "pages/exam/examResult/examResult",
     "pages/forum/forum",
+    "pages/forum/admin/index",
+    "pages/forum/member/index",
     "pages/pay/index/index",
     "pages/pay/success/index",
     "pages/merchant/apply/list/index",
