完成了管理员新增分类以及浏览论坛列表的连接

--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     "pages/exam/exam/exam",
     "pages/exam/examResult/examResult",
     "pages/forum/forum",
+    "pages/forum/preview/preview",
     "pages/forum/admin/index",
     "pages/forum/member/index",
     "pages/pay/index/index",
