--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "pages/my/favoriteList/index",
     "pages/about/index",
     "pages/detail/detail",
+    "pages/detail/forumDetail/detail",
     "pages/exam/examList/examList",
     "pages/exam/exam/exam",
     "pages/exam/examResult/examResult",
