--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "pages/index/index",
     "pages/index/allList/index",
     "pages/my/favoriteList/index",
+    "pages/my/forumList/index",
     "pages/about/index",
     "pages/detail/detail",
     "pages/detail/forumDetail/detail",
