--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "pages/index/allList/index",
     "pages/my/favoriteList/index",
     "pages/my/forumList/index",
+    "pages/my/forumList/updateForum/index",
     "pages/about/index",
     "pages/detail/detail",
     "pages/detail/forumDetail/detail",
