实现了我的发帖中的富文本内容

--- a/app.json
+++ b/app.json
@@ -86,5 +86,8 @@
   ],
   "resolveAlias": {
     "@/*": "/*"
-  }
+  },
+  "usingComponents": {
+    "mp-html": "/miniprogram_npm/mp-html/index"
+}
 }
