实现了管理员反馈列表获取的连接

--- a/app.json
+++ b/app.json
@@ -16,28 +16,20 @@
     "pages/forum/preview/preview",
     "pages/forum/admin/index",
     "pages/forum/member/index",
-    "pages/pay/index/index",
-    "pages/pay/success/index",
-    "pages/merchant/apply/list/index",
-    "pages/merchant/apply/index/index",
-    "pages/store/apply/list/index",
-    "pages/store/apply/index/index",
-    "pages/store/list/index",
     "pages/my/index",
     "pages/modify/index",
     "pages/findback/index",
     "pages/login/phone/code/index",
     "pages/login/phone/pwd/index",
     "pages/login/wechat/index",
-    "pages/bean/index",
     "pages/order/index",
     "pages/appraise/index/index",
     "pages/appraise/list/index",
     "pages/complain/index/index",
     "pages/complain/list/index",
-    "pages/feedback/index/index",
-    "pages/feedback/list/index",
-    "pages/store/detail/index",
+    "pages/feedback/feedback",
+    "pages/feedback/admin/index",
+    "pages/feedback/member/index",
     "pages/logs/logs"
   ],
   "tabBar": {
