反馈列表的未读显示还有点小bug

--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     "pages/about/index",
     "pages/detail/detail",
     "pages/detail/forumDetail/detail",
+    "pages/detail/feedback/detail",
     "pages/exam/examList/examList",
     "pages/exam/exam/exam",
     "pages/exam/examResult/examResult",
