实现了管理员考试首页创建和删除的连接

--- a/app.json
+++ b/app.json
@@ -10,9 +10,9 @@
     "pages/detail/detail",
     "pages/detail/forumDetail/detail",
     "pages/detail/feedback/detail",
-    "pages/exam/examList/examList",
-    "pages/exam/exam/exam",
-    "pages/exam/examResult/examResult",
+    "pages/exam/exam",
+    "pages/exam/admin/index",
+    "pages/exam/member/index",
     "pages/forum/forum",
     "pages/forum/preview/preview",
     "pages/forum/admin/index",
@@ -49,7 +49,7 @@
         "selectedIconPath": "assets/images/tabBarIco/message-active.png"
       },
       {
-        "pagePath": "pages/exam/examList/examList",
+        "pagePath": "pages/exam/exam",
         "text": "考试",
         "iconPath": "assets/images/tabBarIco/examination.png",
         "selectedIconPath": "assets/images/tabBarIco/examination-active.png"
