完成了考试题目更新页面样式的修改

--- a/app.json
+++ b/app.json
@@ -13,6 +13,8 @@
     "pages/exam/exam",
     "pages/exam/admin/index",
     "pages/exam/admin/question/index",
+    "pages/exam/admin/question/updateQuestion/index",
+    "pages/exam/admin/question/createQuestion/index",
     "pages/exam/member/index",
     "pages/forum/forum",
     "pages/forum/preview/preview",
