修复了开始考试传递ExamId错误的BUG

--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "pages/detail/detail",
     "pages/detail/forumDetail/detail",
     "pages/detail/feedback/detail",
+    "pages/detail/examDetail/detail",
     "pages/exam/exam",
     "pages/exam/admin/index",
     "pages/exam/admin/question/index",
@@ -17,6 +18,9 @@
     "pages/exam/admin/question/createQuestion/index",
     "pages/exam/member/index",
     "pages/exam/member/question/index",
+    "pages/examResult/index",
+    "pages/examResult/memberResult/index",
+    "pages/examResult/adminResult/index",
     "pages/forum/forum",
     "pages/forum/preview/preview",
     "pages/forum/admin/index",
