新增了一键举报路径

--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "pages/my/forumList/index",
     "pages/my/examList/index",
     "pages/my/forumList/updateForum/index",
+    "pages/my/report/index",
     "pages/about/index",
     "pages/detail/detail",
     "pages/detail/forumDetail/detail",
@@ -35,8 +36,6 @@
     "pages/order/index",
     "pages/appraise/index/index",
     "pages/appraise/list/index",
-    "pages/complain/index/index",
-    "pages/complain/list/index",
     "pages/feedback/feedback",
     "pages/feedback/admin/index",
     "pages/feedback/member/index",
