基本实现了用户一键举报页面的样式搭建

--- a/app.json
+++ b/app.json
@@ -8,6 +8,8 @@
     "pages/my/examList/index",
     "pages/my/forumList/updateForum/index",
     "pages/my/report/index",
+    "pages/my/report/admin/index",
+    "pages/my/report/member/index",
     "pages/about/index",
     "pages/detail/detail",
     "pages/detail/forumDetail/detail",
