实现了管理员查看举报信息详情页的接口连接

--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
     "pages/detail/forumDetail/detail",
     "pages/detail/feedback/detail",
     "pages/detail/examDetail/detail",
+    "pages/detail/reportDetail/detail",
     "pages/exam/exam",
     "pages/exam/admin/index",
     "pages/exam/admin/question/index",
