实现了管理员咨询上传的获取接口 以及搜索框和分页框的连接

--- a/app.json
+++ b/app.json
@@ -10,6 +10,8 @@
     "pages/my/report/index",
     "pages/my/report/admin/index",
     "pages/my/report/member/index",
+    "pages/my/antiFraudList/index",
+    "pages/my/antiFraudList/admin/index",
     "pages/about/index",
     "pages/detail/detail",
     "pages/detail/forumDetail/detail",
@@ -36,7 +38,6 @@
     "pages/login/phone/code/index",
     "pages/login/phone/pwd/index",
     "pages/login/wechat/index",
-    "pages/order/index",
     "pages/appraise/index/index",
     "pages/appraise/list/index",
     "pages/feedback/feedback",
